<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/applicant_name"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <TextView
        android:id="@+id/text_role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/applicant_role"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_start" />


</LinearLayout>